add ajax handler for suggested search

--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,7 @@ block content
   form
     fieldset
       label MY POKEMON
-      input(type='text', name='pokemon-choice' list='choice-list')
+      input(type='text', name='pokemon' list='choice-list')
       datalist#choice-list
         option Bulbasaur
         option Ivysaur
